# spirit-adventure

./: README.md
spirit_adventure/: CMakeLists.txt  README.md  main.c
spirit_adventure/include/: game.h  map.h  player.h  save.h  text.h
spirit_adventure/src/: game.c  map.c  player.c  save.c  text.c
